<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddAnimal">

    <ImageView
        android:id="@+id/tvVetPet"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:paddingVertical="100dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/vetpet_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/add_animal_details"
        android:layout_gravity="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/add_animal_choose_your_animal"
        android:layout_gravity="left"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDog"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="50dp"
            android:backgroundTint="#DFD5C5"
            android:text="@string/dog"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btnCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:backgroundTint="#DFD5C5"
            android:text="@string/cat"
            android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:hint="@string/breed"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:id="@+id/editBreed"
        android:textSize="20sp"
        android:inputType="text" />

    <EditText
        android:hint="@string/age"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:id="@+id/editAge"
        android:textSize="20sp"
        />
    <EditText
        android:hint="@string/weight"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:id="@+id/editWeight"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm_button"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="left"
        android:background="@drawable/dog"
        android:paddingVertical="100dp"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:layout_width="210dp"
        android:layout_height="200dp"
        android:layout_gravity="right"
        android:background="@drawable/cat"
        android:paddingVertical="100dp"
        tools:ignore="ContentDescription" />


</LinearLayout>
