<resources>
    <string name="app_name">VetPet</string>
    <string name="add_animal_choose_your_animal">Choose Your Animal</string>
    <string name="add_animal_details">Add Animal Details</string>
    <string name="vetpet_logo">VetPet logo</string>
    <string name="dog">Dog</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="breed">Breed</string>
    <string name="confirm_button">Confirm</string>
    <string name="cat">Cat</string>
</resources>