...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_Add"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:background="@android:color/black"
            android:text="Add your animal" />
        <Button
            android:id="@+id/btn_Health"
            android:layout_marginTop="10dp"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
...
