<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Admin_Login">

    <ImageView
        android:id="@+id/tvVetPet"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:layout_marginTop="10dp"
        android:paddingVertical="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="Log In"
        android:layout_gravity="center"
        android:textSize="30dp"/>


    <EditText
        android:id="@+id/et_AdminEmail"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Email" />

    <EditText
        android:id="@+id/et_passwordAdmin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:layout_below="@+id/et_username"
        android:inputType="textPassword"
        android:hint="Password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_loginAdmin"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginRight="5dp"
            android:text="Log in"
            android:textSize="11dp"

            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/btn_forgetAdmin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="Forget Password?"
            android:textSize="11dp"
            android:textColor="#4CAF50" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/ic_character"
        android:paddingVertical="100dp" />

</LinearLayout>