...
    <Button
        android:id="@+id/btn_loginAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:text="Login Admin" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_character"
...
